--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="https://via.placeholder.com/150x50?text=Nexus+Digital" alt="Nexus Digital">
+                Nexux Digital
+<!--                 <img src="https://via.placeholder.com/150x50?text=Nexus+Digital" alt="Nexus Digital"> -->
             </div>
             <nav>
                 <ul>
@@ -425,7 +426,8 @@
     <div class="container">
         <div class="footer-container">
             <div class="footer-logo">
-                <img src="https://via.placeholder.com/150x50?text=Nexus+Digital" alt="Nexus Digital">
+                Nexus Digital
+<!--                 <img src="https://via.placeholder.com/150x50?text=Nexus+Digital" alt="Nexus Digital"> -->
                 <p>Helping businesses grow through innovative digital marketing strategies since 2015.</p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
